added a my_vm.c compile task and make command

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -23,6 +23,26 @@
             ],
             "preLaunchTask": "make",
             "miDebuggerPath": "/usr/bin/gdb"
+        },
+        {
+            "name": "make something",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/my_vm",
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ],
+            "preLaunchTask": "makesomething",
+            "miDebuggerPath": "/usr/bin/gdb"
         }
     ]
 }
