--- a/benchmark/Makefile
+++ b/benchmark/Makefile
@@ -1,7 +1,7 @@
 all: test
 
 test:
-	gcc test.c -L../ -lmy_vm -m32 -lm -o test
+	gcc -g test.c -L../ -lmy_vm -m32 -lm -o test
 
 clean:
 	rm -rf test
